# rust-practice-todo-app

./: Cargo.toml
migrations/: 20260629112100_todos_table.up.sql
src/: db_config.rs  main.rs  todos.rs
