[package]
name = "todo_app"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "macros", "time"] }
anyhow = "1.0.103"   # For clean error propagation
dotenvy = "0.15.7" # For loading .env variables
